--- a/src/main/resources/templates/users/addUserForm.html
+++ b/src/main/resources/templates/users/addUserForm.html
@@ -23,6 +23,9 @@
     </div>
 
     <h4 class="mb-3">회원 정보 입력</h4>
+    <div class="alert alert-warning" role="alert">
+        회원정보 검색 및 비밀번호 찾기 기능은 제공되지 않습니다.
+    </div>
 
     <form action="" th:action th:object="${user}" method="post">
 
