--- a/src/main/resources/templates/questions/category.html
+++ b/src/main/resources/templates/questions/category.html
@@ -14,7 +14,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${category.name}">Category Title</h5>
-                        <p class="card-text">시험 시간 : 65분<br/>총 문항 수 : 50문항<br/>커트라인 : 75점
+                        <p class="card-text">시험 시간 : 65분<br/>총 문항 수 : [[${category.question_cnt}]] 문항<br/>커트라인 : 75점
                         </p>
                         <form th:object="${form}" th:action="@{/questions/start}" method="post">
                             <input type="hidden" th:name="user_id" th:value="${session.loginUser.id}">
