--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -4,5 +4,7 @@
 <!--    <ul class="nav nav-pills pull-right">-->
 <!--        <li><a href="/">Home</a></li>-->
 <!--    </ul>-->
-    <a href="/"><h3 class="text-muted">자격증 시험 TEST</h3></a>
+<!--    <div class="form-inline"><img src="/logo.svg" height="32px">-->
+    <a href="/"><h4 class="text-muted">자격증 대비 모의 고사</h4></a>
+
 </div>
