--- a/src/main/resources/templates/admin/questions.html
+++ b/src/main/resources/templates/admin/questions.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head th:replace="fragments/header :: header">
-</head>
+<head th:replace="fragments/header :: header" />
 
 <body>
 
@@ -9,32 +8,35 @@
 
     <div th:replace="fragments/bodyHeader :: bodyHeader" />
 
-    <div class="py-5 text-center">
-        <h2>문제 리스트</h2>
+    <div class="py-4 text-center">
+        <h4>문제 관리</h4>
     </div>
 
     <hr class="my-4">
-    <div class="row">
-        <form th:action="@{/admin/questions}" method="get">
-        <div class="col">
+
+    <form th:action="@{/admin/questions}" method="get">
+    <div class="row my-4 mx-1">
+
 
             <div class="input-group">
 
-                    <input type="text" class="form-control" name="searchKeyword" th:value="${searchKeyword}" placeholder="Search Category" aria-label="Search Category" aria-describedby="button-addon4">
+                    <input type="text" class="form-control" name="searchKeyword" th:value="${searchKeyword}" placeholder="카테고리" aria-label="Search Category" aria-describedby="button-addon4">
                     <div class="input-group-append" id="button-addon4">
-                        <button class="btn btn-outline-secondary" type="submit">Search</button>
-                        <button class="btn btn-outline-secondary" type="button" th:onclick="|location.href='@{/admin/questions}'|">Reset</button>
+                        <button type="submit" class="btn btn-outline-secondary" >검색</button>
+                        <button type="button" class="btn btn-outline-secondary" th:onclick="|location.href='@{/admin/questions}'|">초기화</button>
+                        <button type="button" class="btn btn-outline-primary" th:onclick="|location.href='@{/admin/question/add}'|">등록</button>
                     </div>
 
             </div>
-        </div>
-        </form>
-        <div class="col">
-            <button type="button" class="btn btn-primary float-right">문제 등록</button>
-        </div>
-    </div>
 
-    <hr class="my-4">
+
+<!--        <div class="col">-->
+<!--            <button type="button" class="btn btn-primary float-right" th:onclick="|location.href='@{/admin/question/add}'|">문제 등록</button>-->
+<!--        </div>-->
+    </div>
+    </form>
+
+<!--    <hr class="my-4">-->
 
 <!--    <th:block layout:fragment="content">-->
     <div class="table-responsive">
@@ -52,16 +54,16 @@
         <table class="table table-sm table-hover">
             <thead>
             <tr>
-                <th scope="col" th:class="w-25">id</th>
-                <th scope="col">title</th>
-                <th scope="col" th:class="w-25">카테고리</th>
+                <th scope="col" >id</th>
+                <th scope="col" th:class="w-75">title</th>
+                <th scope="col" >카테고리</th>
             </tr>
 
             </thead>
             <tbody>
             <tr th:each="item : ${list}">
                 <td><span th:text="${item.id}">id</span></td>
-                <td><span th:text="${item.text}">text</span></td>
+                <td><a th:href="|/admin/question/${item.id}|"><span th:text="${#strings.abbreviate(item.text,50)}">text</span></a></td>
                 <td><span th:text="${item.category_id}">category_id</span></td>
             </tr>
             </tbody>
@@ -77,17 +79,18 @@
     </div>
 <!--    </th:block>-->
 
-    <hr class="my-4">
-    <th:block layout:fragment="script">
-        <script th:inline="javascript">
-            /*<![CDATA[*/
-            function movePage(uri, queryString) {
-                location.href = uri + queryString;
-            }
-            /*]]>*/
-        </script>
-    </th:block>
+    <div th:replace="fragments/footer :: footer" />
+
 
 </div>
+<th:block layout:fragment="script">
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        function movePage(uri, queryString) {
+            location.href = uri + queryString;
+        }
+        /*]]>*/
+    </script>
+</th:block>
 </body>
 </html>
