--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header">
-</head>
+<head th:replace="fragments/header :: header" />
 
 <body>
 
@@ -9,8 +8,8 @@
 
     <div th:replace="fragments/bodyHeader :: bodyHeader" />
 
-    <div class="py-5 text-center">
-        <h2>로그인</h2>
+    <div class="py-4 text-center">
+        <h4>로그인</h4>
     </div>
 
     <form action="item.html" th:action th:object="${loginForm}" method="post" class="px-xl-5">
@@ -19,18 +18,30 @@
             <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
         </div>
 
-        <div class="form-group">
-            <label for="login_id">로그인 ID</label>
-            <input type="text" id="login_id" th:field="*{login_id}" class="form-control"
-                   th:errorclass="field-error">
+        <div class="my-3">
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" style="min-width: 100px">로그인 ID</span>
+                </div>
+                <input type="text" th:field="*{login_id}" class="form-control" th:errorclass="field-error"/>
+            </div>
             <div class="field-error" th:errors="*{login_id}" />
         </div>
-        <div class="form-group">
-            <label for="password">비밀번호</label>
-            <input type="password" id="password" th:field="*{password}" class="form-control"
-                   th:errorclass="field-error">
-            <div class="field-error" th:errors="*{password}" />
+
+
+<!--        <div class="form-group">-->
+<!--            <label for="login_id">로그인 ID</label>-->
+<!--            <input type="text" id="login_id" th:field="*{login_id}" class="form-control"-->
+<!--                   th:errorclass="field-error">-->
+<!--            <div class="field-error" th:errors="*{login_id}" />-->
+<!--        </div>-->
+        <div class="input-group">
+            <div class="input-group-prepend">
+                <span class="input-group-text" style="min-width: 100px">비밀번호</span>
+            </div>
+            <input type="password" th:field="*{password}" class="form-control" th:errorclass="field-error" />
         </div>
+        <div class="field-error" th:errors="*{password}" />
 
         <hr class="my-4">
 
@@ -47,6 +58,7 @@
 
     </form>
 
+    <div th:replace="fragments/footer :: footer" />
 </div> <!-- /container -->
 </body>
 </html>
