--- a/src/main/resources/templates/questions/result.html
+++ b/src/main/resources/templates/questions/result.html
@@ -11,12 +11,42 @@
 
     <h4 th:class="py-5" th:text="${s}"></h4>
 
+    <div>
+        <canvas id="myChart"></canvas>
+    </div>
 
+    <div th:replace="fragments/footer :: footer"></div>
 
 </div> <!-- /container -->
 
     <script th:inline="javascript">
 
+        const data = {
+            labels: [
+                '맞음',
+                '틀림',
+            ],
+            datasets: [{
+                label: 'My First Dataset',
+                data: [60, 40],
+                backgroundColor: [
+                    'rgb(255, 99, 132)',
+                    'rgb(54, 162, 235)'
+                    // 'rgb(255, 205, 86)'
+                ],
+                hoverOffset: 4
+            }]
+        };
+
+        const config = {
+            type: 'doughnut',
+            data: data,
+        };
+
+        const myChart = new Chart(
+            document.getElementById('myChart'),
+            config
+        );
     </script>
 </body>
 </html>
