--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -32,3 +32,27 @@
   /*border-left-color: #5bc0de;*/
 }
 
+.image-area {
+  border: 2px dashed rgb(108, 117, 125, 0.5);;
+  padding: 1rem;
+  position: relative;
+}
+
+.image-area::before {
+  content: '이미지 미리보기';
+  color: #6c757d;
+  font-weight: bold;
+  text-transform: uppercase;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 0.8rem;
+  z-index: 1;
+}
+
+.image-area img {
+  z-index: 2;
+  position: relative;
+}
+
