--- a/src/main/resources/templates/questions/question.html
+++ b/src/main/resources/templates/questions/question.html
@@ -10,20 +10,38 @@
 <!--    <div id="q_item">-->
 <!--        <h5 class="card-title" th:text="${q.text}">question title</h5>-->
 <!--    </div>-->
-
+<!--    th:text="${progress}"-->
     <div class="card" id="q_item">
-        <h5 class="card-header" th:text="${progress}"></h5>
+        <h5 class="card-header" >
+            <div th:text="${progress}">1/3</div>
+            <div class="progress mt-1">
+                <div class="progress-bar" role="progressbar" th:style="'width: ' + ${percent} + '%;'" aria-valuemin="0" aria-valuemax="100" th:text="${percent} + '%'">29%</div>
+            </div>
+        </h5>
+
         <div class="card-body">
-            <h5 class="card-title" th:text="${q.text}">question title</h5>
-            <img th:if="${image}" th:src="*{'data:image/png;base64,'+ image}" />
-<!--            <div th:object="${item}">-->
-                <div class="form-check px-4 py-2" th:each="option : ${options}">
-                        <input type="radio" th:id="${optionStat.index}" th:name="ans" th:value="${option.id}" class="form-check-input">
-                    <label th:for="${optionStat.index}" th:text="${option.text}" class="form-check-label">ITEM</label>
-                </div>
+            <p class="card-text" style="white-space: pre-line" th:utext="${q.text}" />
+            <div class="image-area mb-3" th:if="${image}">
+                <img id="imageResult" th:if="${image}" th:src="*{'data:image/png;base64,'+ image}" alt="" class="img-fluid rounded shadow-sm mx-auto d-block">
+            </div>
+            <hr class="my-4">
+<!--            <div th:each="option : ${options}" class="input-group input-group-sm mb-1" >-->
+<!--                <div class="input-group-prepend">-->
+<!--                    <div class="input-group-text justify-content-md-center" style="min-width: 50px">-->
+<!--                        <input th:id="${optionStat.index}" th:name="ans" th:type="${q.type == 'S'?'radio':'checkbox'}" class="option">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <input type="text" readonly class="form-control-plaintext" th:value="${option.text}">-->
+
 <!--            </div>-->
+
+            <div class="form-check px-4 py-2" th:each="option : ${options}">
+                    <input type="radio" th:id="${optionStat.index}" th:name="ans" th:value="${option.id}" class="form-check-input">
+                <label th:for="${optionStat.index}" th:text="${option.text}" class="form-check-label">ITEM</label>
+            </div>
         </div>
     </div>
+
 
     <div class="row py-2">
         <div class="col">
